--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-  <script type="module" src="/main.js"></script>
+  <script  src="main.js"></script>
 
 </body>
 
