Homepage Button Bug Fixed !!!

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <i class="fas fa-arrow-up"></i>
     </button>
 
-    <nav class="w-screen z-[1] sticky h-20 left-0 top-0 bg-white">
+    <nav class="w-screen z-[4] sticky h-20 left-0 top-0 bg-white">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-20">
           <div class="flex-shrink-0">
@@ -63,13 +63,13 @@
       </div>
     </nav>
 
-    <div class="background w-screen relative z-[-1] h-[calc(100vh-80px)]">
+    <div class="background w-screen relative z-[1] h-[calc(100vh-80px)]">
       <div class="w-full h-full absolute bg-black opacity-[.8]">
         <div class="w-full h-full absolute flex flex-col justify-center items-center opacity-[1]">
           <h1 class="text-white font-[Montserrat] font-black text-3xl text-center">Unlock Your Digital Future</h1>
           <p class="text-white text-center px-10 mt-4">Experience the cutting-edge technology solutions that propel your
             business forward. Explore the limitless possibilities with Timestech Softwares.</p>
-          <button class="px-5 text-white py-4 bg-[#28abe4] mt-10 rounded-full">Discover More</button>
+          <a href="./pages/about.html" class="px-5 text-white py-4 bg-[#28abe4] mt-10 rounded-full">Discover More</a>
         </div>
       </div>
     </div>
@@ -370,7 +370,7 @@
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-  <script  src="main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
