--- a/pages/about.html
+++ b/pages/about.html
@@ -54,9 +54,9 @@
             <div id="mobile-menu" class="hidden md:hidden">
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
                     <a href="/"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base active font-medium hover:bg-[#28abe3]">Home</a>
+                        class="text-black block px-3 py-2 uppercase rounded-md text-base  font-medium hover:bg-[#28abe3]">Home</a>
                     <a href="/pages/about.html"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
+                        class="text-black block active px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
                     <a href="./services.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
                     <a href="#"
