--- a/pages/services.html
+++ b/pages/services.html
@@ -28,10 +28,10 @@
                         <a href="/"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
                         <a href="/pages/about.html"
-                            class="text-[#28abe3] uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
+                            class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
                             Us</a>
                         <a href="./services.html"
-                            class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Our
+                            class="text-black uppercase active text-md font-normal font-[Montserrat] hover:text-blue-300">Our
                             Services</a>
                         <a href="#"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Contact
@@ -53,11 +53,11 @@
             <div id="mobile-menu" class="hidden md:hidden">
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
                     <a href="/"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base active font-medium hover:bg-[#28abe3]">Home</a>
+                        class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Home</a>
                     <a href="/pages/about.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
                     <a href="./services.html"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
+                        class="text-black block px-3 active py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
                     <a href="#"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Contact</a>
                 </div>
