--- a/pages/services.html
+++ b/pages/services.html
@@ -27,7 +27,7 @@
                     <div class="hidden md:flex space-x-10">
                         <a href="/"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
-                        <a href="/pages/about.html"
+                        <a href="/timestech/pages/about.html"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
                             Us</a>
                         <a href="./services.html"
@@ -54,7 +54,7 @@
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
                     <a href="/"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Home</a>
-                    <a href="/pages/about.html"
+                    <a href="/timestech/pages/about.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
                     <a href="./services.html"
                         class="text-black block px-3 active py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
