--- a/pages/about.html
+++ b/pages/about.html
@@ -21,12 +21,12 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex justify-between items-center h-20">
                     <div class="flex-shrink-0">
-                        <a href="#" id="logo"
+                        <a href="/timestech" id="logo"
                             class="logo text-black text-3xl font-black font-[Montserrat]">Timestech</a>
                     </div>
 
                     <div class="hidden md:flex space-x-10">
-                        <a href="/"
+                        <a href="/timestech"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
                         <a href="/pages/about.html"
                             class="text-[#28abe3] uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
@@ -53,7 +53,7 @@
             </div>
             <div id="mobile-menu" class="hidden md:hidden">
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
-                    <a href="/"
+                    <a href="/timestech"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base  font-medium hover:bg-[#28abe3]">Home</a>
                     <a href="/pages/about.html"
                         class="text-black block active px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
