--- a/pages/services.html
+++ b/pages/services.html
@@ -20,7 +20,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex justify-between items-center h-20">
                     <div class="flex-shrink-0">
-                        <a href="#" id="logo"
+                        <a href="/timestech" id="logo"
                             class="logo text-black text-3xl font-black font-[Montserrat]">Timestech</a>
                     </div>
 
@@ -52,7 +52,7 @@
             </div>
             <div id="mobile-menu" class="hidden md:hidden">
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
-                    <a href="/"
+                    <a href="/timestech"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Home</a>
                     <a href="/timestech/pages/about.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
