--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
 
           <div class="hidden md:flex space-x-10">
-            <a href="/timestech"
+            <a href="/"
               class="text-[#28abe3] uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
             <a href="./pages/about.html"
               class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
