--- a/pages/services.html
+++ b/pages/services.html
@@ -25,7 +25,7 @@
                     </div>
 
                     <div class="hidden md:flex space-x-10">
-                        <a href="/"
+                        <a href="/timestech"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
                         <a href="/timestech/pages/about.html"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
