--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
           <a href="/timestech"
             class="text-black block px-3 py-2 uppercase rounded-md text-base active font-medium hover:bg-[#28abe3]">Home</a>
-          <a href="/pages/about.html"
+          <a href="./pages/about.html"
             class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
-          <a href="#"
+          <a href="./pages/services.html"
             class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
           <a href="#"
             class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Contact</a>
