--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timestech | Home</title>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+  <link rel="preload" href="./public/IT_office.jpg" as="image">
+  <link rel="preload" href="./public/IT_team.jpg" as="image">
+  
   <link rel="stylesheet" href="./dist/output.css">
   <link rel="stylesheet" href="style.css">
 </head>
