Footer Updated and icons added !!!

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timestech | Home</title>
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style" onload="this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"></noscript>
   <link rel="preload" href="./public/IT_office.jpg" as="image">
   <link rel="preload" href="./public/IT_team.jpg" as="image">
-  
   <link rel="stylesheet" href="./dist/output.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -22,7 +22,7 @@
   <main id="main" class="relative hidden">
     <button id="scrollToTopBtn"
       class="fixed bottom-8 right-8 bg-[#28abe3] text-white p-3 rounded-full shadow-lg opacity-0 transition-opacity duration-300 hover:bg-[#1c8abf] focus:outline-none">
-      <i class="fas fa-arrow-up"></i>
+      <i class="ri ri-arrow-up-line"></i>
     </button>
     <nav class="w-screen z-[4] sticky h-20 left-0 top-0 bg-white">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -363,12 +363,9 @@
     <!-- Footer Section -->
     <footer class="bg-gray-800 text-white py-6">
       <div class="mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="flex flex-col md:flex-row justify-between items-center">
+        <div class="flex flex-col md:flex-row justify-center items-center">
           <div class="text-center md:text-left mb-4 md:mb-0">
-            <p>&copy; 2024 Timestech Softwares. All rights reserved.</p>
-          </div>
-          <div class="text-center md:text-right">
-            <p>Designed and developed by <a href="/" class="text-[#28abe3] hover:underline">Timestech Team</a></p>
+            <p>&copy; Copyright 2023. All Rights Reserved to Futuristic Trade DMCC | Design and Developed by <a href="/timestech" class="text-[#28abe4]">Timestech Softwares</a></p>
           </div>
         </div>
       </div>
