--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timestech | About</title>
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"></noscript>
     <link rel="stylesheet" href="../dist/output.css">
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -14,9 +15,9 @@
     <main>
 
         <button id="scrollToTopBtn"
-            class="fixed bottom-8 right-8 bg-[#28abe3] text-white p-3 rounded-full shadow-lg opacity-0 transition-opacity duration-300 hover:bg-[#1c8abf] focus:outline-none">
-            <i class="fas fa-arrow-up"></i>
-        </button>
+        class="fixed bottom-8 right-8 bg-[#28abe3] text-white p-3 rounded-full shadow-lg opacity-0 transition-opacity duration-300 hover:bg-[#1c8abf] focus:outline-none">
+        <i class="ri ri-arrow-up-line"></i>
+      </button>
 
         <nav class="w-screen z-[1] sticky h-20 left-0 top-0 bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
