--- a/pages/services.html
+++ b/pages/services.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timestech | Our Services</title>
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"></noscript>
     <link rel="stylesheet" href="../dist/output.css">
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -13,7 +15,7 @@
     <main>
         <button id="scrollToTopBtn"
             class="fixed bottom-8 right-8 bg-[#28abe3] text-white p-3 rounded-full shadow-lg opacity-0 transition-opacity duration-300 hover:bg-[#1c8abf] focus:outline-none">
-            <i class="fas fa-arrow-up"></i>
+            <i class="ri ri-arrow-up-line"></i>
         </button>
 
         <nav class="w-screen z-[1] sticky h-20 left-0 top-0 bg-white">
@@ -84,26 +86,30 @@
                     <div class="service-item">
                         <i class="ri-computer-line text-4xl text-[#28abe3] mb-4"></i>
                         <h3 class="text-xl font-semibold mb-2 font-[Montserrat]">Software Development</h3>
-                        <p class="text-gray-700">We design and develop custom software solutions tailored to meet your business needs.</p>
+                        <p class="text-gray-700">We design and develop custom software solutions tailored to meet your
+                            business needs.</p>
                     </div>
                     <div class="service-item">
                         <i class="ri-cloud-line text-4xl text-[#28abe3] mb-4"></i>
                         <h3 class="text-xl font-semibold mb-2 font-[Montserrat]">Cloud Services</h3>
-                        <p class="text-gray-700">Migrate your business to the cloud and experience scalability, flexibility, and cost savings.</p>
+                        <p class="text-gray-700">Migrate your business to the cloud and experience scalability,
+                            flexibility, and cost savings.</p>
                     </div>
                     <div class="service-item">
                         <i class="ri-shield-line text-4xl text-[#28abe3] mb-4"></i>
                         <h3 class="text-xl font-semibold mb-2 font-[Montserrat]">Cybersecurity</h3>
-                        <p class="text-gray-700">Protect your business from cyber threats with our comprehensive security solutions.</p>
+                        <p class="text-gray-700">Protect your business from cyber threats with our comprehensive
+                            security solutions.</p>
                     </div>
                     <div class="service-item">
                         <i class="ri-question-line text-4xl text-[#28abe3] mb-4"></i>
                         <h3 class="text-xl font-semibold mb-2 font-[Montserrat]">IT Consulting</h3>
-                        <p class="text-gray-700">Get expert advice on IT strategy, infrastructure, and operations to drive business growth.</p>
+                        <p class="text-gray-700">Get expert advice on IT strategy, infrastructure, and operations to
+                            drive business growth.</p>
                     </div>
-                   
 
-                    
+
+
                 </div>
             </div>
         </section>
@@ -111,17 +117,23 @@
         <section class="py-20 bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex flex-col items-center mb-12">
-                    <h2 class="text-3xl text-center font-bold font-[Montserrat] text-black">Web Development Services</h2>
+                    <h2 class="text-3xl text-center font-bold font-[Montserrat] text-black">Web Development Services
+                    </h2>
                     <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-[10vw]">
                     <div class="flex flex-col justify-center">
                         <h3 class="text-2xl font-semibold font-[Montserrat] mb-4">Unlock Your Web Potential</h3>
                         <p class="text-gray-700 text-justify mt-5">
-                            At Timestech Softwares, we specialize in crafting custom web solutions that meet the unique needs of your business. Our team of expert web developers leverages the latest technologies to design, develop, and deploy scalable, secure, and user-friendly websites that drive engagement and conversion.
+                            At Timestech Softwares, we specialize in crafting custom web solutions that meet the unique
+                            needs of your business. Our team of expert web developers leverages the latest technologies
+                            to design, develop, and deploy scalable, secure, and user-friendly websites that drive
+                            engagement and conversion.
                         </p>
                         <p class="text-gray-700 mt-5 text-justify">
-                            From e-commerce platforms to corporate websites, we deliver tailored web solutions that enhance your online presence, improve user experience, and drive business growth. Our web development services include:
+                            From e-commerce platforms to corporate websites, we deliver tailored web solutions that
+                            enhance your online presence, improve user experience, and drive business growth. Our web
+                            development services include:
                         </p>
                         <ul class="list-disc pl-5 mt-5">
                             <li class="text-gray-700">Custom Website Design and Development</li>
@@ -141,17 +153,22 @@
         <section class="py-20 bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex flex-col items-center mb-12">
-                    <h2 class="text-3xl text-center font-bold font-[Montserrat] text-black">App Development Services</h2>
+                    <h2 class="text-3xl text-center font-bold font-[Montserrat] text-black">App Development Services
+                    </h2>
                     <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-[10vw]">
                     <div class="flex flex-col justify-center">
                         <h3 class="text-2xl font-semibold font-[Montserrat] mb-4">Transform Your Ideas into Reality</h3>
                         <p class="text-gray-700 text-justify mt-5">
-                            At Timestech Softwares, we specialize in crafting innovative mobile applications that meet the unique needs of your business. Our team of expert developers leverages the latest technologies to design, develop, and deploy scalable, secure, and user-friendly apps that drive engagement and revenue.
+                            At Timestech Softwares, we specialize in crafting innovative mobile applications that meet
+                            the unique needs of your business. Our team of expert developers leverages the latest
+                            technologies to design, develop, and deploy scalable, secure, and user-friendly apps that
+                            drive engagement and revenue.
                         </p>
                         <p class="text-gray-700 mt-5 text-justify">
-                            Whether you're looking to build a native iOS or Android app, or a cross-platform solution using React Native or Flutter, we've got you covered. Our app development services include:
+                            Whether you're looking to build a native iOS or Android app, or a cross-platform solution
+                            using React Native or Flutter, we've got you covered. Our app development services include:
                         </p>
                         <ul class="list-disc pl-5 mt-2">
                             <li class="text-gray-700">Custom App Design</li>
@@ -171,14 +188,17 @@
         <section class="py-20 bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex flex-col items-center mb-12">
-                    <h2 class="text-3xl text-center font-bold font-[Montserrat] text-black">Logo & Banner Design Services</h2>
+                    <h2 class="text-3xl text-center font-bold font-[Montserrat] text-black">Logo & Banner Design
+                        Services</h2>
                     <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-[10vw]">
                     <div class="flex flex-col justify-center">
                         <h3 class="text-2xl font-semibold font-[Montserrat] mb-4">Crafting Your Visual Identity</h3>
                         <p class="text-gray-700 text-justify mt-5">
-                            A well-designed logo and banner are essential elements of your brand's visual identity. At Timestech Softwares, our team of expert designers specializes in crafting unique, memorable, and scalable logos and banners that effectively communicate your brand's message and values.
+                            A well-designed logo and banner are essential elements of your brand's visual identity. At
+                            Timestech Softwares, our team of expert designers specializes in crafting unique, memorable,
+                            and scalable logos and banners that effectively communicate your brand's message and values.
                         </p>
                         <p class="text-gray-700 mt-5 text-justify">
                             Our logo and banner design services include:
@@ -192,7 +212,8 @@
                         </ul>
                     </div>
                     <div class="flex items-center justify-center">
-                        <img src="../public/logo_design.jpg" alt="Logo & Banner Design" class="rounded-lg shadow-lg max-w-full">
+                        <img src="../public/logo_design.jpg" alt="Logo & Banner Design"
+                            class="rounded-lg shadow-lg max-w-full">
                     </div>
                 </div>
             </div>
