Footer Changes in all the pages !!!

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timestech | About</title>
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style" onload="this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"></noscript>
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style"
+        onload="this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css">
+    </noscript>
     <link rel="stylesheet" href="../dist/output.css">
     <link rel="stylesheet" href="../style.css">
 </head>
 
 <body class="overflow-x-hidden">
-  
+
     <main>
 
         <button id="scrollToTopBtn"
-        class="fixed bottom-8 right-8 bg-[#28abe3] text-white p-3 rounded-full shadow-lg opacity-0 transition-opacity duration-300 hover:bg-[#1c8abf] focus:outline-none">
-        <i class="ri ri-arrow-up-line"></i>
-      </button>
+            class="fixed bottom-8 right-8 bg-[#28abe3] text-white p-3 rounded-full shadow-lg opacity-0 transition-opacity duration-300 hover:bg-[#1c8abf] focus:outline-none">
+            <i class="ri ri-arrow-up-line"></i>
+        </button>
 
         <nav class="w-screen z-[1] sticky h-20 left-0 top-0 bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -96,7 +100,8 @@
                         U.A.E, Middle East, and U.S. markets. We specialize in a wide range of services including
                         Software Development, Cloud Services, Cybersecurity, and IT Consulting.
                     </p>
-                    <a href="#" class="bg-[#28abe3] text-white py-2 px-6 mt-5 rounded-full inline-block hover:bg-[#1c8abf] transition duration-300 text-center">Learn
+                    <a href="#"
+                        class="bg-[#28abe3] text-white py-2 px-6 mt-5 rounded-full inline-block hover:bg-[#1c8abf] transition duration-300 text-center">Learn
                         More About Our Services</a>
                 </div>
                 <div class="flex items-center justify-center">
@@ -238,20 +243,18 @@
             </div>
         </section>
 
-        <footer class="bg-gray-800 text-white py-6 w-screen">
+        <!-- Footer Section -->
+        <footer class="bg-gray-800 text-white py-6">
             <div class="mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="flex flex-col md:flex-row justify-between items-center">
+                <div class="flex flex-col md:flex-row justify-center items-center">
                     <div class="text-center md:text-left mb-4 md:mb-0">
-                        <p>&copy; 2024 Timestech Softwares. All rights reserved.</p>
-                    </div>
-                    <div class="text-center md:text-right">
-                        <p>Designed and developed by <a href="/" class="text-[#28abe3] hover:underline">Timestech
-                                Team</a></p>
+                        <p>&copy; Copyright 2024. All Rights Reserved to Futuristic Trade DMCC | Design and Developed by
+                            <a href="/timestech" class="text-[#28abe4]">Timestech Softwares</a></p>
                     </div>
                 </div>
             </div>
         </footer>
-        
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
