--- a/pages/services.html
+++ b/pages/services.html
@@ -284,19 +284,16 @@
             </div>
         </section>
 
-        <footer class="bg-gray-800 text-white py-6 w-screen">
-            <div class="mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="flex flex-col md:flex-row justify-between items-center">
-                    <div class="text-center md:text-left mb-4 md:mb-0">
-                        <p>&copy; 2024 Timestech Softwares. All rights reserved.</p>
-                    </div>
-                    <div class="text-center md:text-right">
-                        <p>Designed and developed by <a href="/" class="text-[#28abe3] hover:underline">Timestech
-                                Team</a></p>
-                    </div>
-                </div>
+        <!-- Footer Section -->
+    <footer class="bg-gray-800 text-white py-6">
+        <div class="mx-auto px-4 sm:px-6 lg:px-8">
+          <div class="flex flex-col md:flex-row justify-center items-center">
+            <div class="text-center md:text-left mb-4 md:mb-0">
+              <p>&copy; Copyright 2024. All Rights Reserved to Futuristic Trade DMCC | Design and Developed by <a href="/timestech" class="text-[#28abe4]">Timestech Softwares</a></p>
             </div>
-        </footer>
+          </div>
+        </div>
+      </footer>
 
     </main>
 
