--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timestech | Home</title>
-  <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style" onload="this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"></noscript>
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style"
+    onload="this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css">
+  </noscript>
   <link rel="preload" href="./public/IT_office.jpg" as="image">
   <link rel="preload" href="./public/IT_team.jpg" as="image">
   <link rel="stylesheet" href="./dist/output.css">
@@ -365,7 +368,8 @@
       <div class="mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex flex-col md:flex-row justify-center items-center">
           <div class="text-center md:text-left mb-4 md:mb-0">
-            <p>&copy; Copyright 2024. All Rights Reserved to Futuristic Trade DMCC | Design and Developed by <a href="/timestech" class="text-[#28abe4]">Timestech Softwares</a></p>
+            <p>&copy; Copyright 2024. All Rights Reserved to Futuristic Trade DMCC | Design and Developed by <a
+                href="/timestech" class="text-[#28abe4]">Timestech Softwares</a></p>
           </div>
         </div>
       </div>
@@ -376,10 +380,11 @@
   <script src="main.js"></script>
 
   <script>
-    window.addEventListener('load', ()=>{
+    window.addEventListener('load', () => {
       document.getElementById('preloader').style.display = 'none';
       document.getElementById('main').classList.remove('hidden');
     })
   </script>
 </body>
+
 </html>
